# brainFudge

./: betterTriangle.cpp
V2/: main.cpp
V2/Mesh/: Mesh.cpp  Mesh.hpp
V2/Renderer/: Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexLayout.hpp
V2/Shader/: Shader.cpp  Shader.hpp
V2/Shaders/: fragment_shader.glsl  vertex_shader.glsl
V2/Window/: Window.hpp
opengl-stuff/: CMakeLists.txt
opengl-stuff/include/glad/: glad.h
opengl-stuff/src/: main.cpp
opengl-stuff/src/Mesh/: Mesh.cpp
opengl-stuff/src/Renderer/: VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp
opengl-stuff/src/Shader/: Shader.cpp  Shader.hpp
opengl-stuff/src/Shaders/: fragment_shader.glsl  vertex_shader.glsl
opengl-stuff/src/Window/: Window.cpp  Window.hpp
src/: compile.sh  first_app.cpp  glad.c  lve_device.cpp  lve_device.hpp  lve_pipeline.hpp  lve_window.hpp  main.cpp
src/Basics/: betterTriangle.cpp
src/ShaderClass/: Shader.h
src/Shaders/: fragment_shader.glsl  helperFunction.cpp  simple_shader.vert  vertex_shader.glsl
src/Triangle/: fragment_shader.glsl  triangle.cpp  vertex_shader.glsl
vulkan/: v1.cpp
vulkan/src/: first_app.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp  main.cpp  ref.cpp
